--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,10 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+        </dependency>
 
         <!-- 简化Bean代码 -->
         <dependency>
