增加全局结果返回、全局异常捕获

--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -14,7 +14,7 @@
 
     <modules>
         <module>cache</module>
-        <module>constant</module>
+        <module>convention</module>
         <module>web</module>
     </modules>
 
