--- a/framework/convention/pom.xml
+++ b/framework/convention/pom.xml
@@ -10,7 +10,7 @@
         <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>constant</artifactId>
+    <artifactId>convention</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
