--- a/framework/web/pom.xml
+++ b/framework/web/pom.xml
@@ -21,9 +21,10 @@
     <dependencies>
         <dependency>
             <groupId>com.xmerge</groupId>
-            <artifactId>constant</artifactId>
+            <artifactId>convention</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
     </dependencies>
 
 </project>
