--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
 
         <!-- 简化Bean代码 -->
         <dependency>
