--- a/framework/base/pom.xml
+++ b/framework/base/pom.xml
@@ -7,26 +7,15 @@
         <groupId>com.xmerge</groupId>
         <artifactId>damai</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
-    <artifactId>damai-framework</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>base</module>
-        <module>cache</module>
-        <module>convention</module>
-        <module>web</module>
-        <module>chainHandler</module>
-    </modules>
+    <artifactId>base</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-    </dependencies>
 
 </project>
