--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
         <lombok.version>1.18.30</lombok.version>
         <fastjson2.version>2.0.21</fastjson2.version>
         <guava.version>30.0-jre</guava.version>
+        <mapstruct.version>1.4.1.Final</mapstruct.version>
     </properties>
 
     <dependencies>
@@ -47,6 +48,17 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <scope>provided</scope>
         </dependency>
         <!-- spring-boot-starter-validation提供了基于Hibernate Validator的数据验证支持 -->
         <dependency>
