--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.xmerge</groupId>
         <artifactId>damai</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <artifactId>damai-framework</artifactId>
@@ -16,8 +17,10 @@
         <module>base</module>
         <module>cache</module>
         <module>convention</module>
-        <module>web</module>
         <module>chainHandler</module>
+        <module>web</module>
+        <module>util</module>
+        <module>biz</module>
     </modules>
 
     <properties>
