--- a/framework/biz/pom.xml
+++ b/framework/biz/pom.xml
@@ -34,6 +34,12 @@
             <version>0.9.1</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.xmerge</groupId>
+            <artifactId>damai-framework-cache</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
