--- a/framework/convention/pom.xml
+++ b/framework/convention/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.xmerge</groupId>
-        <artifactId>damai-framework</artifactId>
+        <artifactId>yunpiao-framework</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>damai-framework-convention</artifactId>
+    <artifactId>yunpiao-framework-convention</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
