--- a/framework/idempotent/pom.xml
+++ b/framework/idempotent/pom.xml
@@ -5,32 +5,16 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.xmerge</groupId>
-        <artifactId>yunpiao</artifactId>
+        <artifactId>yunpiao-framework</artifactId>
         <version>1.0-SNAPSHOT</version>
-        <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <artifactId>yunpiao-framework</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>base</module>
-        <module>cache</module>
-        <module>convention</module>
-        <module>chainHandler</module>
-        <module>web</module>
-        <module>util</module>
-        <module>biz</module>
-        <module>idempotent</module>
-    </modules>
+    <artifactId>yunpiao-framework-idempotent</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
-    <dependencies>
-    </dependencies>
 
 </project>
