--- a/service/user-service/src/main/resources/application.properties
+++ b/service/user-service/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.servlet.encoding.charset=UTF-8
 
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-spring.datasource.url=jdbc:mysql://localhost:3306/damai?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/yunpiao?useUnicode=true&characterEncoding=UTF-8&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
@@ -13,7 +13,7 @@ spring.datasource.druid.min-idle=5
 spring.datasource.druid.max-active=20
 spring.datasource.druid.test-on-borrow=true
 spring.datasource.druid.validation-query=SELECT 1
-spring.datasource.druid.filters=stat,wall,log4j
+spring.datasource.druid.filters=stat,wall
 spring.datasource.druid.connection-properties=druid.stat.mergeSql=true;druid.stat.slowSqlMillis=5000
 spring.datasource.druid.stat-view-servlet.enabled=true
 spring.datasource.druid.stat-view-servlet.url-pattern=/druid/*
