--- a/service/pom.xml
+++ b/service/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>yunpiao-framework-convention</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.xmerge</groupId>
+            <artifactId>yunpiao-framework-idempotent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>com.xmerge</groupId>
