--- a/service/user-service/pom.xml
+++ b/service/user-service/pom.xml
@@ -21,6 +21,12 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.xmerge</groupId>
+            <artifactId>yunpiao-framework-idempotent</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
